# xhs-agent

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PLANS.md  README.md  code_review.md
.claude/: index.json  settings.json  settings.local.json
.trellis/: .template-hashes.json
ohmyxhs/: CLAUDE.md  SKILL.md
scripts/: analyze-xiaohongshu-cli-update.ps1  codex-checklist.ps1  codex-smoke.ps1  sync-xiaohongshu-cli.ps1
xhs-agent/: AGENTS.md  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  analysis_examples.py  examples.py  pyproject.toml  quickstart.py  types.py
xhs-agent/core/: orchestrator.py
xhs-agent/pipelines/: __init__.py
xhs-agent/pipelines/analysis/: base.py  sentiment.py  trends.py
xhs-agent/pipelines/collection/: __init__.py  base.py  batchers.py  celebrity.py  comments.py  notes.py
xhs-agent/storage/: json_store.py
xhs-agent/strategy/: generator.py
xhs-agent/tests/: __init__.py  test_collection_transformers.py  test_collectors_integration.py  test_imports.py  test_storage_stats.py  test_xhs_factory.py
xhs-agent/xhs_agent/: __init__.py  config.py  types.py
xhs-agent/xhs_agent/core/: __init__.py
xhs-agent/xhs_agent/integrations/: __init__.py  xhs_cli_adapter.py  xhs_factory.py  xhs_port.py
xhs-agent/xhs_agent/pipelines/analysis/: __init__.py  orchestrator.py  performance.py
xhs-agent/xhs_agent/pipelines/collection/: batchers.py  celebrity.py  comments.py  notes.py
xhs-agent/xhs_agent/storage/: __init__.py  base.py  json_store.py
xhs-agent/xhs_agent/strategy/: __init__.py  generator.py
(+21 files in other folders)
