[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xhs-agent"
version = "0.1.0"
description = "XHS data collection, analysis, and strategy generation toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6,<3",
    "xiaohongshu-cli>=0.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xhs_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
